Add guest login in teedy

--- a/docs-web/pom.xml
+++ b/docs-web/pom.xml
@@ -141,6 +141,9 @@
     <resources>
       <resource>
         <directory>src/main/resources</directory>
+        <excludes>
+                <exclude>**/*</exclude> <!-- 排除所有文件 -->
+            </excludes>
       </resource>
     </resources>
   </build>
