--- a/docs-web/src/dev/resources/hibernate.properties
+++ b/docs-web/src/dev/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class=org.h2.Driver
-hibernate.connection.url=jdbc:h2:/mnt/d/FinresandPheoton/2025 Spring/Software/Lab/teedy_ina/save
+hibernate.connection.url=jdbc:h2:/mnt/d/FinresandPheoton/2025Spring/Software/Lab/teedy_ina/save
 hibernate.connection.username=sa
 hibernate.connection.password=
 hibernate.hbm2ddl.auto=
