--- a/docs-web-common/pom.xml
+++ b/docs-web-common/pom.xml
@@ -8,6 +8,24 @@
     <version>1.12-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
+
+  <reporting>
+    <plugins>
+        <!-- Maven Site Plugin -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+            <version>3.9.1</version>
+        </plugin>
+    </plugins>
+  </reporting>
+
+  <distributionManagement>
+    <site>
+        <url>file://${project.basedir}/target/site</url>
+    </site>
+  </distributionManagement>
+  
   
   <modelVersion>4.0.0</modelVersion>
   <artifactId>docs-web-common</artifactId>
